--- a/charts/minio/templates/minio.yaml
+++ b/charts/minio/templates/minio.yaml
@@ -18,7 +18,7 @@ metadata:
 stringData:
   # change the username and password to your own values.
   # ensure that the user is at least 3 characters long and the password at least 8
-  minio_root_user: {{ (split "-" $.Release.Namespace)._0 }}
+  minio_root_user: gregab
   minio_root_password: {{ .Values.password | default "thisisthepassword" }}
 ---
 kind: Deployment
